# hyprshell

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CONFIGURE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  NIX.md  PKGBUILD  README.md  about.toml  flake.nix  justfile  release-please-config.json
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: publish.yml  release-please.yml  test.yml  update.yml
clipboard-lib/: Cargo.toml
clipboard-lib/src/: lib.rs  test.rs
config-lib/: Cargo.toml
core-lib/: Cargo.toml
core-lib/src/: util.rs
crates/capture-proto/: Cargo.toml
crates/capture-proto/src/: lib.rs  main.rs  wayland_capture.rs
crates/clipboard-lib/: Cargo.toml  README.md
crates/clipboard-lib/src/store/: mime.rs  save_image.rs  save_map.rs  save_text.rs
crates/config-edit-lib/: Cargo.toml  README.md
crates/config-edit-lib/src/: bind.rs  footer.rs  lib.rs  overview.rs  start.rs  structs.rs  styles.css  switch.rs  update.rs  update_changes_view.rs  util.rs  windows.rs
crates/config-edit-lib/src/components/: changes.rs  launcher.rs  root.rs  shortcut_dialog.rs  switch.rs  theme.rs  windows.rs  windows_overview.rs
crates/config-edit-lib/src/components/generate/: main.rs  step0.rs  step1.rs  step2.rs  step4.rs
crates/config-edit-lib/src/components/launcher_plugins/: actions.rs  applications.rs  calc.rs  main.rs  mod.rs  websearch.rs
crates/config-edit-lib/src/views/: changes.rs  launcher.rs  mod.rs  overview.rs  plugins.rs  switch.rs  windows.rs
crates/config-edit-lib/src/views/launcher/: mod.rs
crates/config-edit-lib/src/views/windows/: mod.rs
crates/config-lib/: Cargo.toml  README.md
crates/config-lib/src/: check.rs  explain.rs  lib.rs  load.rs  modifier.rs  structs.rs
crates/config-lib/src/generate/: config.rs  tui.rs
crates/config-lib/src/io/: config.rs  convert.rs  load.rs  mod.rs  save.rs
crates/config-lib/src/migrate/: check.rs  migrate_config.rs
crates/config-lib/src/style/: load.rs
crates/core-lib/: Cargo.toml  README.md
crates/core-lib/src/: data.rs  lib.rs  listener.rs  structs.rs
crates/core-lib/src/binds/: structs.rs  transfer.rs
crates/core-lib/src/default/: mod.rs
crates/core-lib/src/transfer/: receive.rs  structs.rs
crates/core-lib/src/util/: helpers.rs
crates/exec-lib/: Cargo.toml  README.md
crates/exec-lib/src/: binds.rs  collect.rs  kill.rs  lib.rs  plugin.rs  run.rs  switch.rs  util.rs  wayland_capture.rs
crates/hyprland-plugin/: Cargo.toml  build.rs
crates/hyprland-plugin/plugin/: Makefile  test-hyprland.conf
crates/hyprland-plugin/plugin/src/: defs-test.h  defs.h  globals.h  handlers.cpp  handlers.h  init.cpp  init.h  key-press.cpp  main.cpp  socket_listener.cpp  socket_listener.h  toast.cpp
crates/hyprland-plugin/plugin/src-54/: key-press.cpp
crates/hyprland-plugin/plugin/src_old/: defs.h  init.cpp  register.h  send.cpp
crates/hyprland-plugin/src/: build.rs  configure.rs  extract.rs  lib.rs  test.rs
crates/launcher-lib/: Cargo.toml  README.md
crates/launcher-lib/src/: create.rs  debug.rs  global.rs  lib.rs  plugin.rs  plugins_boxes.rs  result.rs  root.rs  styles.css  update.rs
crates/launcher-lib/src/plugins/: actions.rs  calc.rs  main.rs  mod.rs  path.rs  search.rs  shell.rs  terminal.rs
crates/launcher-lib/src/plugins/actions/: included.rs  mod.rs  plugin.rs
crates/launcher-lib/src/plugins/applications/: map.rs  mod.rs  plugin.rs
crates/windows-lib/: Cargo.toml  README.md
crates/windows-lib/src/: css.rs  data.rs  global.rs  keybinds.rs  lib.rs  next.rs  sort.rs  styles.css
crates/windows-lib/src/overview/: create.rs  mod.rs  open.rs  render.rs  root.rs  update.rs  window.rs
crates/windows-lib/src/shared/: capture_utils.rs  mod.rs  workspace_clients.rs  workspaces.rs
crates/windows-lib/src/switch/: clients.rs  close.rs  close_item.rs  create.rs  mod.rs  open.rs  render.rs  root.rs  update.rs  workspace_clients.rs  workspaces.rs
css-examples/: liquid-glass.css
dep-crates/hyprland/: Cargo.toml
dep-crates/hyprland-rs/: Cargo.toml
dep-crates/hyprland-rs/hyprland-macros/: Cargo.toml
dep-crates/hyprland-rs/src/: bind_new.rs  dispatch_new.rs  keyword.rs  lib.rs  lua.rs  window_rule.rs
dep-crates/hyprland/hyprland-macros/: Cargo.toml
dep-crates/hyprland/src/: bind_new.rs  window_rule.rs
dep-crates/relm4/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
dep-crates/relm4-components/: .cargo_vcs_info.json  Cargo.toml
dep-crates/relm4-components/src/alert/: mod.rs
dep-crates/wl-clipboard-rs/: Cargo.toml
dep-crates/wl-clipboard-rs/.github/workflows/: ci.yml
dep-crates/wl-clipboard-rs/src/: common.rs  paste.rs
dep-crates/wl-clipboard-rs/src/tests/: paste.rs
docs/: CONFIGURE.md  NIX.md
docs/css-examples/: test.css
exec-lib/: Cargo.toml
exec-lib/src/: run.rs
launcher-lib/: Cargo.toml
launcher-lib/src/: create.rs  match.rs
nix/: build.nix  checks.nix  default.nix  module.nix
packaging/: hyprshell.service  license.hbs
packaging/pkgbuild/: PKGBUILD  PKGBUILD-bin  PKGBUILD-slim
packaging/share/themes/00_default/: data.ini  style.css
packaging/share/themes/01_default_box_shadow/: data.ini
packaging/share/themes/01_modern/: data.ini  style.css
packaging/share/themes/02_modern/: data.ini  style.css
packaging/share/themes/03_modern_box_shadow/: data.ini  style.css
packaging/share/themes/03_solarized_dark/: data.ini  style.css
packaging/share/themes/04_dracula/: data.ini  style.css
pkgbuild/: PKGBUILD  PKGBUILD-bin  PKGBUILD-slim
scripts/: check-all-feature-combinations.sh
scripts/ci/: build-aarch64.sh  build-x86.sh  install-gtk4-layer-shell-aarch64.sh  install-gtk4-layer-shell.sh
src/: cli.rs  data.rs  debug.rs  default_styles.css  explain.rs  fallback-styles.css  keybinds.rs  main.rs  receive_handle.rs  root.rs  socket.rs  start.rs  util.rs  wm.rs
test-files/nixos/: configuration.nix  enrico.nix
test-global/: Cargo.toml
windows-lib/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: bundle.rs  cmd.rs  edit.rs  licenses.rs  load.rs  main.rs  pkgbuild.rs  publish.rs.old  version.rs
(+20 files in other folders)
