[workspace]
members = ["crates/exec-lib", "crates/core-lib", "crates/windows-lib", "crates/launcher-lib", "crates/config-lib", "crates/clipboard-lib", "dep-crates/hyprland-rs", "dep-crates/hyprland-rs/hyprland-macros", "dep-crates/wl-clipboard-rs", "dep-crates/relm4", "dep-crates/relm4-components", "crates/config-edit-lib", "crates/capture-proto"]

[workspace.package]
version = "4.10.6"
description = "A modern GTK4-based window switcher and application launcher for Hyprland"
license = "MIT"
authors = ["h3rmt"]
keywords = ["hyprland"]
repository = "https://github.com/h3rmt/hyprshell/"
# update when nixpkgs has a newer rustc
rust-version = "1.91.0"
edition = "2024"

[workspace.dependencies]
anyhow = { version = "1.0.100" }
tracing = { version = "0.1.44" }
serde_json = { version = "1.0.148" }
serde = { version = "1.0.228", features = ["derive"] }
semver = { version = "1.0.27" }
regex = { version = "1.12.2" }
test-log = { version = "0.2.19", default-features = false, features = ["trace", "unstable"] }

relm4 = { path = "dep-crates/relm4", package = "hyprshell-relm4", default-features = false, features = ["libadwaita", "macros", "gnome_48"], version = "=4.10.6" }
#relm4 = { package = "relm4", default-features = false, features = ["libadwaita", "macros", "gnome_48"], version = "0.11.0" }
relm4-components = { path = "dep-crates/relm4-components", package = "hyprshell-relm4-components", version = "=4.10.6" }
gtk4-layer-shell = { version = "0.8.0" }

config-lib = { path = "crates/config-lib", package = "hyprshell-config-lib", version = "=4.10.6" }
core-lib = { path = "crates/core-lib", package = "hyprshell-core-lib", version = "=4.10.6" }
exec-lib = { path = "crates/exec-lib", package = "hyprshell-exec-lib", version = "=4.10.6" }
launcher-lib = { path = "crates/launcher-lib", package = "hyprshell-launcher-lib", version = "=4.10.6" }

[package]
name = "hyprshell"
readme = "README.md"
categories = []
documentation = "https://docs.rs/hyprshell"
version = "4.10.6"
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
exclude = [".idea/*", ".github/*"]

[dependencies]
anyhow.workspace = true
tracing.workspace = true
relm4.workspace = true
semver.workspace = true
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter", "ansi"], default-features = false }
tracing-log = { version = "0.2.0" }
async-channel = "2.5.0"

config-lib.workspace = true
core-lib.workspace = true
exec-lib.workspace = true
launcher-lib.workspace = true
#clipboard-lib = { path = "crates/clipboard-lib", package = "hyprshell-clipboard-lib", version = "=4.10.4" }
windows-lib = { path = "crates/windows-lib", package = "hyprshell-windows-lib", version = "=4.10.6" }
config-edit-lib = { path = "crates/config-edit-lib", package = "hyprshell-config-edit-lib", version = "=4.10.6", optional = true }

[dev-dependencies]
test-log.workspace = true

[features]
default = ["json5_config", "gui_settings_editor", "launcher_calc", "debug_command"]
#default = ["json5_config", "gui_settings_editor", "launcher_calc", "debug_command", "clipboard_compress_lz4", "clipboard_compress_zstd", "clipboard_compress_brotli", "clipboard_encrypt_chacha20poly1305", "clipboard_encrypt_aes_gcm"]
slim = ["gui_settings_editor", "debug_command"]
#slim = ["gui_settings_editor", "debug_command", "clipboard_compress_lz4"]
json5_config = ["config-lib/json5_config"]
gui_settings_editor = ["dep:config-edit-lib"]
launcher_calc = ["launcher-lib/calc", "config-lib/launcher_calc_plugin", "config-edit-lib?/launcher_calc_plugin"]
debug_command = []
ci_config_check = ["config-lib/ci_no_default_config_values"]
#clipboard_compress_lz4 = ["clipboard-lib/compress_lz4"]
#clipboard_compress_zstd = ["clipboard-lib/compress_zstd"]
#clipboard_compress_brotli = ["clipboard-lib/compress_brotli"]
#clipboard_encrypt_chacha20poly1305 = ["clipboard-lib/encrypt_chacha20poly1305"]
#clipboard_encrypt_aes_gcm = ["clipboard-lib/encrypt_aes_gcm"]

dev = ["config-lib/disable_migrations"]


[profile.release]
strip = "debuginfo"
lto = true
opt-level = 3

[lints]
workspace = true

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
single_match = "allow"
match_wildcard_for_single_variants = "allow"
struct_excessive_bools = "allow"
missing_errors_doc = "allow"
cast_possible_truncation = "allow"
# This is broken
uninlined_format_args = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_wraps = "warn"
pathbuf_init_then_push = "warn"
print_stdout = "warn"
print_stderr = "warn"
