[package]
name = "hyprshell-clipboard-lib"
documentation = "https://docs.rs/hyprshell-clipboard-lib"
version = "4.5.0"
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
gtk.workspace = true
gtk4-layer-shell.workspace = true
core-lib.workspace = true
exec-lib.workspace = true
async-channel.workspace = true
config-lib.workspace = true
wl-clipboard-rs = { path = "../../wl-clipboard-rs" }
wayland-protocols-wlr = { version = "0.3.8", features = ["client"] }
wayland-client = { version = "0.31.10" }