[package]
name = "hyprshell-xtask"
publish = false
version = "0.0.0"
description = "Common tasks for hyprshell development and realease"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
semver.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
toml_edit = { version = "0.25.12" }

[lints]
workspace = true
