[package]
name = "hyprshell-xtask"
publish = false
version = "0.0.0"
description = "Common tasks for hyprshell development and realease"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
semver.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
toml_edit = { version = "0.25.12" }
cargo-about = { version = "0.9.0", features = [], optional = true }
krates = { version = "0.21", features = ["serialize"], optional = true }
spdx = { version = "0.13", features = ["detection-parallel", "detection-inline-cache", "text"], optional = true }
codespan = { version = "0.13", optional = true }

[lints]
workspace = true

[features]
default = ["licenses"]
licenses = ["dep:cargo-about", "dep:krates", "dep:spdx", "dep:codespan"]