[package]
name                   = "capture-proto"
version.workspace      = true
description.workspace  = true
license.workspace      = true
authors.workspace      = true
keywords.workspace     = true
repository.workspace   = true
rust-version.workspace = true
edition.workspace      = true

[dependencies]
gtk4              = { version = "0.11.3", features = ["v4_10"] }
image             = "0.25.10"
rustix            = { version = "1.1.4", features = ["fs", "mm"] }
wayland-client    = "0.31.8"
wayland-protocols = { version = "0.32.6", features = ["client", "staging"] }

[lints]
workspace = true
