[package]
name                   = "capture-proto"
version.workspace      = true
description.workspace  = true
license.workspace      = true
authors.workspace      = true
keywords.workspace     = true
repository.workspace   = true
rust-version.workspace = true
edition.workspace      = true

[dependencies]
exec-lib       = { package = "hyprshell-exec-lib", path = "../exec-lib" }
gtk4           = { version = "0.11.3", features = ["v4_14"] }
image          = "0.25.10"
wayland-client = "0.31.8"

[lints]
workspace = true
