[package]
name = "hyprshell-core-lib"
documentation = "https://docs.rs/hyprshell-core-lib"
version = "4.11.0-alpha"
description = "A library for containing common structs and core functionality"
readme = "./README.md"
categories.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
serde_json.workspace = true
serde.workspace = true
inotify = { version = "0.11.2", default-features = false }
notify-rust = { version = "4.17.0", features = ["d"], default-features = false }

[features]
json5_config = []

[lints]
workspace = true

[dev-dependencies]
test-log.workspace = true
