[package]
name = "hyprshell-exec-lib"
documentation = "https://docs.rs/hyprshell-exec-lib"
version = "4.10.6"
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
core-lib.workspace = true
config-lib.workspace = true
semver.workspace = true
regex.workspace = true
hyprland = { package = "hyprshell-hyprland", path = "../../dep-crates/hyprland-rs", features = ["async-lite", "dispatch", "keyword", "data", "listener", "ctl", "config", "lua", "trace"], default-features = false, version = "=4.10.6" }
wayland-client = "0.31.8"
wayland-protocols = { version = "0.32.6", features = ["client", "staging"] }
gbm = "0.18"
rustix = { version = "1.1.4", features = ["fs", "mm"] }

[lints]
workspace = true
