[package]
name = "hyprshell-exec-lib"
documentation = "https://docs.rs/hyprshell-exec-lib"
version = "4.10.8"
readme.workspace = true
categories.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
core-lib.workspace = true
semver.workspace = true
regex.workspace = true
hyprland = { package = "hyprshell-hyprland", path = "../../dep-crates/hyprland-rs", features = ["async-lite", "dispatch", "keyword", "data", "listener", "ctl", "config", "lua", "trace"], default-features = false, version = "=4.10.8" }

[lints]
workspace = true
