[package]
name = "hyprshell-exec-lib"
documentation = "https://docs.rs/hyprshell-exec-lib"
version = "4.10.8"
description = "A library containing hyprland specific code"
readme = "./README.md"
categories.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
core-lib.workspace = true
semver.workspace = true
regex.workspace = true
hyprland = { package = "hyprshell-hyprland", path = "../../dep-crates/hyprland", features = ["async-lite", "dispatch", "keyword", "data", "listener", "ctl", "config", "lua", "trace"], default-features = false, version = "=4.10.8" }
wayland-client = { version = "0.31.8", optional = true }
wayland-protocols = { version = "0.32.6", features = ["client", "staging"], optional = true }
gbm = { version = "0.18", optional = true }
rustix = { version = "1.1.4", features = ["fs", "mm"], optional = true }
wayland-protocols-hyprland = { version = "1.2.0", features = ["client"], optional = true }

[features]
live_windows = ["dep:wayland-client", "dep:wayland-protocols", "dep:gbm", "dep:rustix", "dep:wayland-protocols-hyprland"]

[lints]
workspace = true
