[package]
version = "4.11.0-alpha" # remember to update html_root_url
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/YaLTeR/wl-clipboard-rs"
keywords = ["wayland", "clipboard"]
name = "hyprshell-wl-clipboard-rs"
description = "Access to the Wayland clipboard for terminal and other window-less applications."

readme = "README.md"
documentation = "https://docs.rs/wl-clipboard-rs"
categories = ["os"]

[dependencies]
log = "0.4.26"
os_pipe = { version = "1.2.1", features = ["io_safety"] }
rustix = { version = "0.38.44", features = ["fs", "event"] }
thiserror = "2"
tree_magic_mini = "3"
wayland-backend = "0.3.11"
wayland-client = "0.31.11"
wayland-protocols = { version = "0.32.9", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }

[dev-dependencies]
wayland-server = "0.31.10"
wayland-protocols = { version = "0.32.9", features = ["server", "staging"] }
wayland-protocols-wlr = { version = "0.3.9", features = ["server"] }
proptest = "1"
proptest-derive = "0.7"

[features]
# Link to libwayland-client.so instead of using the Rust implementation.
native_lib = ["wayland-backend/client_system"]

dlopen = ["native_lib", "wayland-backend/dlopen", "wayland-backend/dlopen"]
